<resources>
    <string name="app_name">Accesso</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_for_an_account">Don\'t have an account? sign Up</string>
    <string name="dummy_text">Sign in to continue</string>
    <string name="password">PASSWORD</string>
    <string name="username">EMAIL</string>
    <string name="welcome_to_accesso">Welcome to Accesso</string>
    <string name="signIn">S I G N I N</string>
    <string name="sign_up">S I G N U P</string>
    <string name="already_have_an_account">Already have an Account? Log in</string>
    <string name="name">NAME</string>
    <string name="skip">S K I P</string>
    <string name="buyItem">Buy</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="s_i_g_n_i_n">S I G N I N</string>
    <string name="error_short_name">Name must be of three charater</string>
    <string name="invalid_mail">Invalid mail address</string>
    <string name="error_short_password">minimum 6 character</string>
    <string name="account_created">Account Successfully created.</string>
    <string name="something_went_wrong">Something went wrong\nPlease try again later</string>
    <string name="logout">Logout</string>
</resources>